--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,8 @@
 body {
-    background-color: saddlebrown;
+    padding-top: 50px;
+    padding-left: 100px;
+    padding-bottom: 50px;
+    background-color: burlywood;
     color: black;
+}
 }
