--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,17 @@
-body {
-    padding-top: 50px;
-    padding-left: 100px;
-    padding-bottom: 50px;
+.form {
+  /*  padding-top: 50px;
+    padding-left: 150px;
+    padding-bottom: 50px;*/
     background-color: burlywood;
     color: black;
+    border-style: ridge;
+    border-radius: 20px;
 }
+
+body {
+    background-color: saddlebrown;
+    color: black;
+}
+.footer{
+    text-align: center;
 }
